feat: Centralize Firebase initialization
Moves Firebase initialization logic into a dedicated configuration file (`src/config/firebase.ts`). This improves code organization and allows for more robust initialization, prioritizing a local `service-account.json` file before falling back to default credentials. Adds `path` and `fs` dependencies.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
     "geolib": "https://aistudiocdn.com/geolib@^3.3.4",
-    "morgan": "https://aistudiocdn.com/morgan@^1.10.1"
+    "morgan": "https://aistudiocdn.com/morgan@^1.10.1",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security"
   }
 }
 </script>
